--- a/bundle.yaml
+++ b/bundle.yaml
@@ -27349,7 +27349,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-operator
-  namespace: default
+  namespace: monitoring
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -27440,7 +27440,7 @@ metadata:
     app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/version: 0.57.0
   name: prometheus-operator
-  namespace: default
+  namespace: monitoring
 spec:
   replicas: 1
   selector:
@@ -27495,7 +27495,7 @@ metadata:
     app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/version: 0.57.0
   name: prometheus-operator
-  namespace: default
+  namespace: monitoring
 ---
 apiVersion: v1
 kind: Service
@@ -27505,7 +27505,7 @@ metadata:
     app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/version: 0.57.0
   name: prometheus-operator
-  namespace: default
+  namespace: monitoring
 spec:
   clusterIP: None
   ports:
